# NeteaseHookSDK

./: .gitignore  CMakeLists.txt  Issues.md  LICENSE  README.md
.github/workflows/: release.yml
Archived/: V0.1.0_Complete_Archival.md
docs/: API.md  DEMO.md  DESIGN.md
examples/: CMakeLists.txt  c_demo.c
include/Utils/: FontManager.h
resources/shaders/: aurora.fs  circle_mask.fs  glass.fs
src/Agent/: CMakeLists.txt  version_proxy.cpp
src/App/: AlbumCover.cpp  AlbumCover.h  AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  FftHelper.h  MemoryMonitor.cpp  MemoryMonitor.h  Visualizer.h  main.cpp
src/Driver/: CDPController.cpp  CMakeLists.txt  LogRedirect.cpp  NeteaseDriver.cpp
src/Driver/include/: CDPController.h  LogRedirect.h  NeteaseDriver.h
src/Shared/: SharedData.hpp  SimpleLog.h
src/Tests/: CMakeLists.txt  main_test.cpp
src/Utils/: FontManager.cpp  NeteaseAPI.cpp  NeteaseAPI.h
tests/: CMakeLists.txt  test_api.cpp
